Quest: Fix an image stretching for quest image

--- a/src/components/shared/CoverPicture/CoverPicture.css
+++ b/src/components/shared/CoverPicture/CoverPicture.css
@@ -3,5 +3,7 @@
 }
 .cover-image__fluid {
     width: 100%;
-    max-height: 300px
+    max-height: 300px;
+
+    object-fit: cover;
 }
